# mapanote

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js
examples/vault-sample/: vault.json
examples/vault-sample/taxonomies/: regions.yaml
scripts/: extract-svg-countries.js  fetch-country-data.js  filter-countries-by-svg.js  generate-countries-json.js  generate-starter-vault.js  svg-countries.json
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: metadata.rs  mod.rs  topics.rs  vault.rs
src-tauri/src/data/: countries.json
src-tauri/src/models/: mod.rs
src-tauri/src/vault/: frontmatter.rs  mod.rs  notes.rs  reader.rs  writer.rs
src/lib/components/: ActivityStream.svelte  AddNoteForm.svelte  AddTopicNoteForm.svelte  CountryList.svelte  CreateTopicModal.svelte  EditNoteModal.svelte  EditTopicNoteModal.svelte  ExportMenu.svelte  ImageUploader.svelte  LoadingSkeleton.svelte  MarkdownRenderer.svelte  MarkdownToolbar.svelte  PromoteToTopicModal.svelte  SearchModal.svelte  ThemeToggle.svelte  Timeline.svelte  TopicsRail.svelte  VaultPicker.svelte  WelcomeScreen.svelte  WorldMap.svelte
src/lib/data/: countries.json  countryHelpers.ts  isoMapping.ts
src/lib/stores/: countriesMetadata.ts  mapStats.ts  searchStore.ts  svgCache.ts  theme.ts  topics.ts  vault.ts
src/lib/types/: index.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/timeline/: +page.svelte
src/routes/topics/: +page.svelte
test-vault/: vault.json
test-vault-complete/countries/ag/: index.md
test-vault-complete/countries/al/: index.md
test-vault-complete/countries/ao/: index.md
test-vault-complete/countries/aw/: index.md
test-vault-complete/countries/ba/: index.md
test-vault-complete/countries/bb/: index.md
test-vault-complete/countries/bg/: index.md
test-vault-complete/countries/bi/: index.md
test-vault-complete/countries/bj/: index.md
test-vault-complete/countries/bn/: index.md
test-vault-complete/countries/bq/: index.md
test-vault-complete/countries/bs/: index.md
test-vault-complete/countries/bt/: index.md
test-vault-complete/countries/bv/: index.md
test-vault-complete/countries/bz/: index.md
test-vault-complete/countries/ca/: index.md
test-vault-complete/countries/cc/: index.md
vault-template/: vault.json
vault-template/countries/ad/: index.md
(+325 files in other folders)
