[package]
name = "mapanote"                         # was "atlas-notes"
version = "0.1.0"
description = "A local-first geopolitics notebook"
authors = ["conpans"]
edition = "2021"

# keep this; it's needed on Windows
[lib]
name = "atlas_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }  # no extra features needed for your current setup
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
