[package]
name = "mapanote"
version = "0.1.0"
description = "A local-first geopolitics notebook"
authors = ["conpans"]
edition = "2021"

# This is needed for Tauri to build properly
[lib]
name = "mapanote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core (v2)
tauri = { version = "2", features = [] }  # ← Keep only this one
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2" 
tauri-plugin-fs = "2" 
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }  # ← Keep only this one
include_dir = "0.7" 

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Markdown parsing
pulldown-cmark = "0.11"
yaml-rust2 = "0.8"

# Utilities
regex = "1.10"
ulid = "1.1"

# File operations
walkdir = "2.5"
